--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,9 @@
-<!doctype html><title>Page title</title><p>Hi</p>
+---
+eleventyExcludeFromCollections: true
+layout: root.njk
+---
+<ul>
+  {%- for post in collections.all -%}
+    <li><a href="{{post.url}}">{{post.data.title}}</a></li>
+  {%- endfor -%}
+</ul>
